# thesis

./: .controllability-transparency.instructions.md  .gitattributes  .gitignore  .pre-commit-config.yaml  .vale-academic.ini  .vale-clarity.ini  .vale-readability.ini  .vale-strict.ini  .vale.ini  AGENTS.md  LICENSE  README_STANDALONE.md  _assemble_package.py  _verify_package.py  bandit_src_report_latest.txt  count_chapters.py  coverage_src_report_latest.txt  duplicate_src_report_latest.txt  file_map.md  hygiene_src_report_latest.txt  interrogate_src_report_latest.txt  main_standalone.py  pip_audit_report_latest.txt  pyrightconfig.json  requirements.txt  run_pipeline_test.py
07_implementation/: .gitignore  ACTIVE_BASELINE.md  BL020_HANDOFF_AUDIT_2026-03-21.md  CLEAN_ARCHITECTURE.md  CODE_SIZE_ANALYSIS.md  CONTROL_SURFACE_REGISTRY.md  DEMO_PROFILE_CATALOG.md  DETERMINISM_RANDOMNESS_POLICY.md  DETERMINISTIC_ITERATION_AUDIT.md  IMPLEMENTATION_STATE_2026-03-24.md  INSTALLATION_POSTURE.md  PAYLOAD_CONTRACT.md  PHASE_4_VERIFICATION_COMPLETE.md  README.md  RESEARCH_DIRECTIONS.md  RUN_CONFIG_REFERENCE.md  RUN_GUIDE.md  SIGNAL_FILES_MAINTENANCE.md  SPOTIFY_INTEGRATION.md  TOOLING_QUALITY_POSTURE.md  TRANSPARENCY_AUDIT_CHECKLIST.md  TRANSPARENCY_SPEC.md  VIVA_RUN_SCRIPT.md  artefact_refinement_spec.md  backlog.md  ci_guard_phase_6_check.py  experiment_log.md  implementation_plan.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.ps1  spotify_resilience.py  test_notes.md  test_resilience_integration.py  test_standalone.py  website.md
(+2131 files in other folders)
