[project]
name = "recommendation-implementation"
version = "1.0.0"
description = "Deterministic playlist generation pipeline implementation (BL-003 to BL-014)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Academic Research Use License (see repository LICENSE)" }
keywords = ["recommender-systems", "deterministic-pipeline", "thesis"]

[project.urls]
Repository = "../"
Documentation = "README.md"

[tool.ruff]
line-length = 100
target-version = "py314"
force-exclude = true
extend-exclude = [
  "tests/**",
  "mentor_feedback_submission/src/**/outputs/**",
  "src/**/outputs/**",
  "_scratch/**",
  "_deep_archive_march2026/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
